[project]
name = "matcha-monitor"
version = "0.1.0"
description = "Notifications for matcha restocks."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Helzeiah", email = "helzeiaho@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "requests",
    "beautifulsoup4",
    "twilio",
    "pyyaml"
]

[project.scripts]
matcha-monitor = "matcha_monitor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"