[project]
name = "matcha-monitor"
version = "0.1.0"
description = "Notifications for matcha restocks."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Helzeiah", email = "helzeiaho@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "click>=8",
    "pyyaml>=6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jmespath>=1.0",
    "python-dotenv>=1.0",
    "keyring>=25.2",
]

[project.scripts]
matcha-monitor = "matcha_monitor.cli:cli"

[tool.ruff]
line-length = 100
select = ["E","F","I","B"]